delete 2fa and fix bugs
